<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pagina5">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:background="@drawable/degradado_accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/ini"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Inicio"
            android:textColor="@color/claro"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/saludo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hola Emilio"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/balan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Balance Total"
            android:textColor="@color/claro"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/saldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="$405.064"
            android:textColor="@color/claro"
            android:textSize="50sp" />

    </LinearLayout>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imagenfondo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/imagen1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ultimas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="160dp"
        android:text="Ultimas Transacciones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/edit1"
        android:layout_width="40dp"
        android:layout_height="42dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="?attr/actionBarItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoperfil1"
        app:srcCompat="@drawable/ic_action_icon2" />


    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/fotoperfil1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcherperfil2_round" />

    <Button
        android:id="@+id/btning"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/ingresar"
        app:icon="@drawable/ic_action_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnenvi"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/btnenvi"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/enviar"
        android:theme="@style/btn2"
        app:icon="@drawable/ic_action_icon1"
        app:layout_constraintBottom_toBottomOf="@+id/btning"
        app:layout_constraintEnd_toStartOf="@+id/btning"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btning" />

    <LinearLayout
        android:id="@+id/perfiles"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/imageFilterView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcherperfil6_round" />

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="20/04/2024" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="$25.000"
                app:emojiCompatEnabled="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/imageFilterView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcherperfil4_round" />

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="22/04/2024" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="$50.000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/imageFilterView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcherperfil3_round" />

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="23/04/2024" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="$32.000" />

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/sal"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_action_iccircazul" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/sali"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/sal"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_action_iccircazul" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/ingr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toTopOf="@+id/sali"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_action_iccircazuling" />

</androidx.constraintlayout.widget.ConstraintLayout>